# latincy-lexicon

./: .gitignore  BENCH_BASELINE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
notebooks/: latincy-lexicon-demo.ipynb
scripts/: bench_startup.py
src/latincy_lexicon/: __init__.py  analyzer.py  build.py  cli.py  enums.py  generator.py  glosses.py  models.py  spacy.py
src/latincy_lexicon/align/: __init__.py  headword.py  normalize.py  pluralia.py  report.py
src/latincy_lexicon/data/overrides/: OVR-001-neque-conj.toml  README.md
src/latincy_lexicon/db/: __init__.py  loader.py  patches.py  queries.py  schema.py
src/latincy_lexicon/export/: __init__.py  json_export.py  lemma_supplement.py  stats.py
src/latincy_lexicon/parsers/: __init__.py  addons.py  dictline.py  inflects.py  tricks.py  uniques.py
tests/: conftest.py  test_dedup_source_priority.py  test_enums.py  test_generator.py  test_generator_validation.py  test_gloss_split.py  test_lexicon_inflection_enrichment.py  test_lexicon_packon_pronouns.py  test_models.py  test_overrides.py
tests/test_align/: test_headword.py  test_normalize.py
tests/test_db/: test_loader.py  test_queries.py  test_schema.py
tests/test_parsers/: test_addons.py  test_dictline.py  test_inflects.py  test_tricks.py  test_uniques.py
